2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/reiserfs.c (grub_reiserfs_read): Use #if 0 instead of commenting
	code out.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/cache.h (grub_arch_sync_caches) [i386 || x86_64]: Inline.
	* kern/i386/coreboot/init.c (grub_arch_sync_caches): Remove.
	* kern/i386/efi/init.c (grub_arch_sync_caches): Likewise.
	* kern/i386/ieee1275/init.c (grub_arch_sync_caches): Likewise.
	* kern/i386/pc/init.c (grub_arch_sync_caches): Likewise.
	* util/misc.c (grub_arch_sync_caches) [i386 || x86_64]: Likewise.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/err.h (grub_err_printf): Don't export.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/dl.h (grub_dl_register_symbol): Don't export.

2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i18n.h (grub_gettext_dummy): Removed.
	* kern/misc.c (grub_gettext_dummy): Make static.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/misc.c (grub_utf8_to_ucs4): Don't eat valid characters preceeded
	by non-valid ones.
	* kern/term.c (grub_putchar): Likewise.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* partmap/sun.c (sun_partition_map_iterate): Restructure flow to fix
	buggy hook call and memory leak.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/ls.c (grub_ls_list_files): Free pathname on exit.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/fat.c (grub_fat_iterate_dir): Free unibuf at exit.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/i386/pc/xnu.c (grub_xnu_set_video): Add const qualifier to
	modevar.
	Return grub_errno on allocation error.

2010-02-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/ieee1275/ofdisk.c (grub_ofdisk_read): Correct error handling.

2010-02-06  Yves Blusseau  <blusseau@zetam.org>

	* conf/common.rmk (grub_script_check_SOURCES): add missing dependencies.